--- a/app/src/main/res/navigation/navigation_pending.xml
+++ b/app/src/main/res/navigation/navigation_pending.xml
@@ -12,7 +12,7 @@
 
     <fragment
         android:id="@+id/navigation_pending"
-        android:name="io.usys.report.ui.fragments.DashboardFragment"
+        android:name="io.usys.report.ui.ysr.HomeDashboardFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_pending" />
 
