try out building

--- a/app/src/main/res/layout/fragment_home_tryouts.xml
+++ b/app/src/main/res/layout/fragment_home_tryouts.xml
@@ -2,17 +2,46 @@
 
 <!-- Created by ChazzCoin : November 2022 -->
 
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/tryoutsRootView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@drawable/soccer_field">
 
     <ImageView
         android:id="@+id/testDragImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/download" />
-</LinearLayout>
+
+    <ImageView
+        android:id="@+id/testDragImageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        app:srcCompat="@drawable/download" />
+
+    <ImageView
+        android:id="@+id/testDragImageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        app:srcCompat="@drawable/download" />
+
+    <ImageView
+        android:id="@+id/testDragImageView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        app:srcCompat="@drawable/download" />
+
+    <ImageView
+        android:id="@+id/testDragImageView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        app:srcCompat="@drawable/download" />
+</RelativeLayout>
