--- a/app/src/main/res/layout/card_home_banner_large.xml
+++ b/app/src/main/res/layout/card_home_banner_large.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<io.usys.report.ui.ysr.YsrExpandableCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<io.usys.report.ui.views.YsrExpandableCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardYsrExpander"
@@ -81,4 +81,4 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-</io.usys.report.ui.ysr.YsrExpandableCardView>
+</io.usys.report.ui.views.YsrExpandableCardView>
