--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -10,9 +10,9 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="io.usys.report.ui.ysr.HomeDashboardFragment"
+        android:name="io.usys.report.ui.ysr.DashboardHomeFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/default_full_dashboard" />
     <fragment
         android:id="@+id/navigation_notifications"
         android:name="io.usys.report.coachUser.locManageActivity.CartFragment"
