--- a/app/src/main/res/navigation/navigation_admin.xml
+++ b/app/src/main/res/navigation/navigation_admin.xml
@@ -12,7 +12,7 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="io.usys.report.ui.ysr.HomeDashboardFragment"
+        android:name="io.usys.report.ui.ysr.DashboardHomeFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_admin" />
 
