--- a/app/src/main/res/navigation/navigation_location_manager.xml
+++ b/app/src/main/res/navigation/navigation_location_manager.xml
@@ -17,9 +17,9 @@
         tools:layout="@layout/spot_calendar_fragment" />
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="io.usys.report.ui.ysr.HomeDashboardFragment"
+        android:name="io.usys.report.ui.ysr.DashboardHomeFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/default_full_dashboard" />
     <fragment
         android:id="@+id/navigation_locations"
         android:name="io.usys.report.coachUser.manage.LocManageFragment"
@@ -29,6 +29,6 @@
         android:id="@+id/navigation_profile"
         android:name="io.usys.report.ui.ysr.user.ProfileFragment"
         android:label="@string/title_profile"
-        tools:layout="@layout/fragment_user_profile" />
+        tools:layout="@layout/profile_user" />
 
 </navigation>
