--- a/app/src/main/res/layout/ysr_title_list_view.xml
+++ b/app/src/main/res/layout/ysr_title_list_view.xml
@@ -18,7 +18,9 @@
             android:id="@+id/ysrTxtTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
             android:layout_marginTop="24dp"
+            android:layout_marginRight="24dp"
             android:text="Ysr Title"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -31,7 +33,10 @@
             android:id="@+id/ysrRecycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="24dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
