user and coach setup with realm

--- a/app/src/main/res/layout/default_full_dashboard.xml
+++ b/app/src/main/res/layout/default_full_dashboard.xml
@@ -2,8 +2,7 @@
 
 <!-- Created by ChazzCoin : November 2022 -->
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -39,9 +38,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/includeYsrListViewSports" />
-
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
