--- a/app/src/main/res/layout/card_player_tiny.xml
+++ b/app/src/main/res/layout/card_player_tiny.xml
@@ -48,13 +48,13 @@
         <TextView
             android:id="@+id/cardPlayerTinyTxtRank"
             android:layout_width="20dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="3dp"
+            android:layout_height="match_parent"
             android:gravity="center"
             android:text="1"
             android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/cardPlayerTinyTxtName"
             app:layout_constraintTop_toTopOf="parent" />
 
 
